walsvid - update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,15 @@
+#                                                           
+#   _______                                      __ _       
+#  |__   __|                                    / _(_)      
+#     | |_ __ ___  _   ___  __   ___ ___  _ __ | |_ _  __ _ 
+#     | | '_ ` _ \| | | \ \/ /  / __/ _ \| '_ \|  _| |/ _` |
+#     | | | | | | | |_| |>  <  | (_| (_) | | | | | | | (_| |
+#     |_|_| |_| |_|\__,_/_/\_\  \___\___/|_| |_|_| |_|\__, |
+#                                                      __/ |
+#                                                     |___/ 
+#                                                           
+# Config for Tmux (c) Walsvid
+
 # Split windows
 bind \ split-window -h
 bind - split-window -v
@@ -5,6 +17,7 @@ bind - split-window -v
 # set-option -g default-shell zsh
 setw -g mode-keys vi
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 # start selecting text typing 'v' key (once you are in copy mode)
 # bind-key -t vi-copy v begin-selection
 # copy selected text to the system's clipboard
@@ -19,7 +32,6 @@ bind-key / command-prompt "split-window -h 'exec man %%'"
 
 set-option -g allow-rename off  # prevent system from renaming our window
 
-
 set -g default-terminal "screen-256color"
 
 # Set remote tmux's prefix
@@ -29,8 +41,8 @@ bind -n C-a send-prefix
 # set-option -g prefix C-@
 
 # Set main pane
-set -w -g main-pane-width 60 # 设置主Pane宽度
-set -w -g main-pane-height 60 # 设置主Pane高度
+set -w -g main-pane-width 60 # Set main pane width
+set -w -g main-pane-height 60 # Set main pane height
 
 # Set shortcuts for controlling panes
 bind ^q killp
@@ -45,15 +57,15 @@ set -g status-bg colour238
 set -g status-fg colour12
 set -g status-attr dim
 set -g status-left ""
-# status右边显示当前时间
+# status right shows  cpu | user | time | battery
 set -g status-right '#[fg=colour16,bold] #{cpu_bg_color} #{cpu_icon}#{cpu_percentage} \
-#[fg=colour16,bg=colour4,bold] #(whoami) \
+#[fg=colour16,bg=colour4,bold] #{USER} \
 #[fg=colour16,bg=colour3,bold] %y-%m-%d #[fg=colour16,bg=colour6,bold] %H:%M:%S \
 #[fg=colour16,bold]#{battery_status_bg} #{battery_percentage} #{battery_graph} '
 set -g status-right-length 100
 set -g status-left-length 20
 
-# 设置windows菜单颜色 Prefix+w
+# Set windows menu colour Prefix+w
 setw -g clock-mode-colour colour5
 setw -g mode-attr bold
 setw -g mode-fg colour15
@@ -66,13 +78,13 @@ set -g pane-active-border-bg default
 set -g pane-active-border-fg colour4
 
 
-# 设置status面板当前windows颜色
+# Set status panel current windows color
 setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour244
 setw -g window-status-current-attr bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-# 设置status非活跃windows颜色
+# Set status inactive windows color
 setw -g window-status-fg colour138
 setw -g window-status-bg colour238
 setw -g window-status-attr none
@@ -82,7 +94,7 @@ setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
 setw -g window-status-bell-bg colour1
 
-# 设置message字体颜色
+# Set the message font color
 set -g message-attr bold
 set -g message-fg colour232
 set -g message-bg colour2
