--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,7 @@ bind -n C-a send-prefix
 
 # Set leader to Ctrl+Space
 # set-option -g prefix C-@
+bind-key -n C-h set-option -g status
 
 # Set main pane
 set -w -g main-pane-width 60 # Set main pane width
