--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -103,9 +103,17 @@ set -g message-bg colour2
 # Set battery
 set -g @batt_remain_short true
 
+# tmux-resurrect
+set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
+# set -g @resurrect-save 'S'
+# set -g @resurrect-restore 'R'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Other examples:
 set -g @plugin 'tmux-plugins/tmux-cpu'
