walsvid - add plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,7 +59,7 @@ set -g status-fg colour12
 set -g status-attr dim
 set -g status-left ""
 # status right shows  cpu | user | time | battery
-set -g status-right '#[fg=colour16,bold] #{cpu_bg_color} #{cpu_icon}#{cpu_percentage} \
+set -g status-right '#[bold]#{prefix_highlight}#[fg=colour16,bold]#{cpu_bg_color} #{cpu_icon}#{cpu_percentage} \
 #[fg=colour16,bg=colour4,bold] #{USER} \
 #[fg=colour16,bg=colour3,bold] %y-%m-%d #[fg=colour16,bg=colour6,bold] %H:%M:%S \
 #[fg=colour16,bold]#{battery_status_bg} #{battery_percentage} #{battery_graph} '
@@ -110,10 +110,22 @@ set -g @resurrect-strategy-vim 'session'
 # set -g @resurrect-save 'S'
 # set -g @resurrect-restore 'R'
 
+# Configurations of prefix
+set -g @prefix_highlight_fg colour16
+set -g @prefix_highlight_bg colour9
+set -g @prefix_highlight_prefix_prompt 'Wait'
+set -g @prefix_highlight_copy_prompt 'Copy'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=colour5,bold' # default is 'fg=default,bg=yellow'
+set -g @prefix_highlight_output_prefix '['
+set -g @prefix_highlight_output_suffix ']'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Other examples:
 set -g @plugin 'tmux-plugins/tmux-cpu'
