--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,13 +1,16 @@
-#                                                           
-#   _______                                      __ _       
-#  |__   __|                                    / _(_)      
-#     | |_ __ ___  _   ___  __   ___ ___  _ __ | |_ _  __ _ 
-#     | | '_ ` _ \| | | \ \/ /  / __/ _ \| '_ \|  _| |/ _` |
-#     | | | | | | | |_| |>  <  | (_| (_) | | | | | | | (_| |
-#     |_|_| |_| |_|\__,_/_/\_\  \___\___/|_| |_|_| |_|\__, |
-#                                                      __/ |
-#                                                     |___/ 
-#                                                           
+###############################################################
+#                                                             #
+#   _______                                      __ _         #
+#  |__   __|                                    / _(_)        #
+#     | |_ __ ___  _   ___  __   ___ ___  _ __ | |_ _  __ _   #
+#     | | '_ ` _ \| | | \ \/ /  / __/ _ \| '_ \|  _| |/ _` |  #
+#     | | | | | | | |_| |>  <  | (_| (_) | | | | | | | (_| |  #
+#     |_|_| |_| |_|\__,_/_/\_\  \___\___/|_| |_|_| |_|\__, |  #
+#                                                      __/ |  #
+#                                                     |___/   #
+#                                                             #
+#                                                             #
+###############################################################
 # Config for Tmux (c) Walsvid
 
 # Split windows
@@ -51,20 +54,28 @@ bind ^e last
 # Set mouse
 set -g mouse on
 
-set -g status-justify left
-set -g status-interval 1
 set -g status-position bottom
 set -g status-bg colour238
 set -g status-fg colour12
 set -g status-attr dim
-set -g status-left ""
-# status right shows  cpu | user | time | battery
-set -g status-right '#[bold]#{prefix_highlight}#[fg=colour16,bold]#{cpu_bg_color} #{cpu_icon}#{cpu_percentage} \
-#[fg=colour16,bg=colour4,bold] #{USER} \
-#[fg=colour16,bg=colour3,bold] %y-%m-%d #[fg=colour16,bg=colour6,bold] %H:%M:%S \
-#[fg=colour16,bold]#{battery_status_bg} #{battery_percentage} #{battery_graph} '
-set -g status-right-length 100
-set -g status-left-length 20
+
+set -g status-justify centre
+set -g status-interval 1
+tmux_separator_left_bold=''
+tmux_separator_left_thin=''
+tmux_separator_right_bold=''
+tmux_separator_right_thin=''
+tmux_status_user="#[fg=colour16,bg=colour6,bold] #{USER} #[bg=colour4,fg=colour6,bold]${tmux_separator_right_bold}"
+tmux_status_host_name="#[fg=colour16,bg=colour4,bold] #h #[bg=colour238,fg=colour4,bold]${tmux_separator_right_bold}"
+tmux_status_prefix="#[bold]#{prefix_highlight}"
+tmux_status_cpu="#{cpu_fg_color}${tmux_separator_left_bold}#[fg=colour16,bold]#{cpu_bg_color} #{cpu_icon}#{cpu_percentage} #[fg=colour6]${tmux_separator_left_bold}"
+tmux_status_date="#[fg=colour16,bg=colour6,bold] %y-%m-%d #[fg=colour13]${tmux_separator_left_bold}"
+tmux_status_time="#[fg=colour16,bg=colour13,bold] %H:%M:%S "
+tmux_status_battery="#{battery_status_fg}${tmux_separator_left_bold}#[fg=colour16,bold]#{battery_status_bg} #{battery_percentage} #{battery_graph}"
+set -g status-left "${tmux_status_user}${tmux_status_host_name}"
+set -g status-right "${tmux_status_cpu}${tmux_status_date}${tmux_status_time}${tmux_status_battery}"
+set -g status-right-length 90
+set -g status-left-length 90
 
 # Set windows menu colour Prefix+w
 setw -g clock-mode-colour colour5
@@ -84,6 +95,7 @@ setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour244
 setw -g window-status-current-attr bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-separator '#[fg=colour138, bg=colour238]'${tmux_separator_right_thin}
 
 # Set status inactive windows color
 setw -g window-status-fg colour138
@@ -110,24 +122,11 @@ set -g @resurrect-strategy-vim 'session'
 # set -g @resurrect-save 'S'
 # set -g @resurrect-restore 'R'
 
-# Configurations of prefix
-set -g @prefix_highlight_fg colour16
-set -g @prefix_highlight_bg colour9
-set -g @prefix_highlight_prefix_prompt 'Wait'
-set -g @prefix_highlight_copy_prompt 'Copy'
-set -g @prefix_highlight_show_copy_mode 'on'
-set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=colour5,bold' # default is 'fg=default,bg=yellow'
-set -g @prefix_highlight_output_prefix '['
-set -g @prefix_highlight_output_suffix ']'
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-
-# Other examples:
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'github_username/plugin_name'
