walsvid - add dict for tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,8 +14,16 @@
 # Config for Tmux (c) Walsvid
 
 # Split windows
-bind \ split-window -h
-bind - split-window -v
+unbind-key %
+unbind-key '"'
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# Separators
+tmux_separator_left_bold=''
+tmux_separator_left_thin=''
+tmux_separator_right_bold=''
+tmux_separator_right_thin=''
 
 # set-option -g default-shell zsh
 setw -g mode-keys vi
@@ -31,7 +39,8 @@ set -g pane-base-index 1
 set -s escape-time 0
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-bind-key / command-prompt "split-window -h 'exec man %%'"
+bind-key / command-prompt -p "${tmux_separator_left_thin} Mannual ${tmux_separator_right_thin}" "split-window -h 'exec man %%'"
+bind-key y command-prompt -p "${tmux_separator_left_thin} Dictionary ${tmux_separator_right_thin}" "split-window -h 'ydict %% ; read'"
 
 set-option -g allow-rename off  # prevent system from renaming our window
 
@@ -61,10 +70,6 @@ set -g status-attr dim
 
 set -g status-justify centre
 set -g status-interval 1
-tmux_separator_left_bold=''
-tmux_separator_left_thin=''
-tmux_separator_right_bold=''
-tmux_separator_right_thin=''
 tmux_status_user="#[fg=colour16,bg=colour6,bold] #{USER} #[bg=colour4,fg=colour6,bold]${tmux_separator_right_bold}"
 tmux_status_host_name="#[fg=colour16,bg=colour4,bold] #h #[bg=colour238,fg=colour4,bold]${tmux_separator_right_bold}"
 tmux_status_prefix="#[bold]#{prefix_highlight}"
@@ -94,14 +99,17 @@ set -g pane-active-border-fg colour4
 setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour244
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+# setw -g window-status-current-format "#[fg=colour238, bg=colour244]${tmux_separator_right_bold}#[fg=colour81] #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F #[fg=colour244, bg=colour238]${tmux_separator_right_bold}"
+setw -g window-status-current-format " #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F "
 setw -g window-status-separator '#[fg=colour138, bg=colour238]'${tmux_separator_right_thin}
+# setw -g window-status-separator ""
 
 # Set status inactive windows color
 setw -g window-status-fg colour138
 setw -g window-status-bg colour238
 setw -g window-status-attr none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+# setw -g window-status-format " #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F #[fg=colour138, bg=colour238]${tmux_separator_right_thin}"
+setw -g window-status-format " #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F "
 
 setw -g window-status-bell-attr bold
 setw -g window-status-bell-fg colour255
@@ -116,17 +124,17 @@ set -g message-bg colour2
 set -g @batt_remain_short true
 
 # tmux-resurrect
-set -g @resurrect-save-bash-history 'on'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-vim 'session'
+# set -g @resurrect-save-bash-history 'on'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @resurrect-strategy-vim 'session'
 # set -g @resurrect-save 'S'
 # set -g @resurrect-restore 'R'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'github_username/plugin_name'
