--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -124,16 +124,16 @@ set -g message-bg colour2
 set -g @batt_remain_short true
 
 # tmux-resurrect
-# set -g @resurrect-save-bash-history 'on'
-# set -g @resurrect-capture-pane-contents 'on'
-# set -g @resurrect-strategy-vim 'session'
-# set -g @resurrect-save 'S'
-# set -g @resurrect-restore 'R'
+set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
