Update tmux conf add joint and break

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,11 @@ unbind-key '"'
 bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+# Joint pane
+bind-key j command-prompt -p "join pane from:"  "join-pane -s ':%%'"
+bind-key s command-prompt -p "send pane to:"  "join-pane -t ':%%'"
+bind-key b command-prompt -p "break pane from:#{window_index} after window:#{session_windows}" "break-pane"
+
 # Separators
 tmux_separator_left_bold=''
 tmux_separator_left_thin=''
